<resources>
    <string name="app_name">Text Color Changer</string>
    <string name="str_violet">Violet</string>
    <string name="str_indigo">Indigo</string>
    <string name="str_blue">Blue</string>
    <string name="str_green">Green</string>
    <string name="str_yellow">Yellow</string>
    <string name="str_orange">Orange</string>
    <string name="str_red">Red</string>
    <string name="str_text_color">Text Color</string>
</resources>
